--- a/trunk/IL2DCE/Pages/CampaignIntro.xaml
+++ b/trunk/IL2DCE/Pages/CampaignIntro.xaml
@@ -7,23 +7,23 @@
     <Grid Height="780" Width="1366" HorizontalAlignment="Left" VerticalAlignment="Top">
         <my1:ButtonAsMenuItem Content="Fly" Height="77" HorizontalAlignment="Left" Margin="68,72,0,0" Name="Fly" VerticalAlignment="Top" Width="206" />
         <my1:ButtonAsMenuItem Content="Back" Height="77" HorizontalAlignment="Left" Margin="68,155,0,0" Name="Back" VerticalAlignment="Top" Width="206" />
-        <ComboBox Height="63" HorizontalAlignment="Left" Margin="331,142,0,0" Name="comboBoxSelectArmy" VerticalAlignment="Top" Width="398" FontSize="28" Foreground="#FF8D6822">
+        <ComboBox Height="63" HorizontalAlignment="Left" Margin="331,142,0,0" Name="comboBoxSelectArmy" VerticalAlignment="Top" Width="617" FontSize="28" Foreground="#FFA0854A">
             <ComboBox.Background>
                 <SolidColorBrush />
             </ComboBox.Background>
         </ComboBox>
-        <Label Content="Select army:" Height="64" HorizontalAlignment="Left" Margin="331,72,0,0" Name="labelSelectArmy" VerticalAlignment="Top" Width="398" FontSize="28" Foreground="#FF8D6822" />
-        <ComboBox Height="63" HorizontalAlignment="Left" Margin="331,281,0,0" Name="comboBoxSelectAirGroup" VerticalAlignment="Top" Width="398" FontSize="28" Foreground="#FF8D6822">
+        <Label Content="Select army:" Height="64" Margin="331,72,418,0" Name="labelSelectArmy" VerticalAlignment="Top" FontSize="28" Foreground="#FFA0854A" />
+        <ComboBox Height="63" HorizontalAlignment="Left" Margin="331,281,0,0" Name="comboBoxSelectAirGroup" VerticalAlignment="Top" Width="618" FontSize="28" Foreground="#FFA0854A">
             <ComboBox.Background>
                 <SolidColorBrush />
             </ComboBox.Background>
         </ComboBox>
-        <Label Content="Select air group:" Height="64" HorizontalAlignment="Left" Margin="331,211,0,0" Name="labelSelectAirGroup" VerticalAlignment="Top" Width="398" FontSize="28" Foreground="#FF8D6822" />
-        <ComboBox Height="63" HorizontalAlignment="Left" Margin="331,426,0,0" Name="comboBoxSelectAircraft" VerticalAlignment="Top" Width="398" FontSize="28" Foreground="#FF8D6822">
+        <Label Content="Select air group:" Height="64" HorizontalAlignment="Left" Margin="331,211,0,0" Name="labelSelectAirGroup" VerticalAlignment="Top" Width="617" FontSize="28" Foreground="#FFA0854A" />
+        <ComboBox Height="63" HorizontalAlignment="Left" Margin="331,426,0,0" Name="comboBoxSelectAircraft" VerticalAlignment="Top" Width="618" FontSize="28" Foreground="#FFA0854A">
             <ComboBox.Background>
                 <SolidColorBrush />
             </ComboBox.Background>
         </ComboBox>
-        <Label Content="Select aircraft:" Height="64" HorizontalAlignment="Left" Margin="331,350,0,0" Name="labelSelectAircraft" VerticalAlignment="Top" Width="398" FontSize="28" Foreground="#FF8D6822" />
+        <Label Content="Select aircraft:" Height="64" HorizontalAlignment="Left" Margin="331,350,0,0" Name="labelSelectAircraft" VerticalAlignment="Top" Width="617" FontSize="28" Foreground="#FFA0854A" />
     </Grid>
 </UserControl>
